--- a/src/translations/ru.json
+++ b/src/translations/ru.json
@@ -9,7 +9,7 @@
   "homePage": "Главная страница",
   "reminder": "Напоминание",
   "logout": "Выйти",
-  "first_reminder": "Олимпиада проводится в два этапа. Первый этап проводится в онлайн-формате. 300 участников, набравших наибольшее количество баллов за правильные ответы на тестовые вопросы, получают право на участие во втором этапе.",
+  "first_reminder": "Олимпиада проводится в два этапа. Первый этап проводится в онлайн-формате. 500 участников, набравших наибольшее количество баллов за правильные ответы на тестовые вопросы, получают право на участие во втором этапе.",
   "second_reminder": "Первый этап: тесты проводятся на сайте 'iqmath.uz' и включают 30 вопросов. Баллы распределяются следующим образом: первые 10 вопросов оцениваются в 2,1 балла за каждый; следующие 10 вопросов — в 3,1 балла за каждый; последние 10 вопросов — в 5,1 балла за каждый.",
   "third_reminder": "Продолжительность олимпиады - 1 час.",
   "fourth_reminder": "Максимально возможный результат составляет 103 балла. На выполнение тестов отводится 1 час. После завершения указанного времени система автоматически завершит тест, и баллы будут начислены только за отвеченные вопросы. Вопросы без ответа оцениваются в 0 баллов. Вы сможете увидеть свои результаты сразу после завершения теста.",
@@ -24,7 +24,7 @@
   "resultsPage": "Результаты олимпиады пользователя",
   "testResults": "Результаты теста",
   "myAnswers": "Мои ответы",
-  "resultsDesc": "Топ-300 участников, набравших наибольшее количество баллов, переходят на второй этап. Если вы из них, вы можете увидеть сообщение 'Вы перешли на второй этап!' на этой странице в ближайшее время. Кроме того, сообщение будет отправлено на ваш телефон в виде SMS.",
+  "resultsDesc": "Топ-500 участников, набравших наибольшее количество баллов, переходят на второй этап. Если вы из них, вы можете увидеть сообщение 'Вы перешли на второй этап!' на этой странице в ближайшее время. Кроме того, сообщение будет отправлено на ваш телефон в виде SMS.",
   "totalScore": "Ваш общий балл",
   "score": "балл",
   "login": "вход",
@@ -143,5 +143,5 @@
   "LangOfEducation": "Язык обучения",
   "courses": "Курсы",
   "schoolNumber": "Введите номер вашей школы",
-  "litseyName": "Выберите академический лицей"
+  "litseyName": "Выберите название средней школы из списка."
 }
