--- a/src/translations/ru.json
+++ b/src/translations/ru.json
@@ -144,5 +144,7 @@
   "LangOfEducation": "Язык обучения",
   "courses": "Курсы",
   "schoolNumber": "Введите номер вашей школы",
-  "litseyName": "Выберите название средней школы из списка."
+  "litseyName": "Выберите название средней школы из списка.",
+  "cancel": "Отмена",
+  "contract": "Пользовательское соглашение и политика конфиденциальности"
 }
